// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Teaser Grid Block should render OneColumn 1`] = `
<DocumentFragment>
  <div
    class="css-1levw0h e1v93h7b0"
  >
    <article
      class="css-1w4vbdl e58tik10"
      x="0"
      y="0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-9lisvk-MuiTypography-root-MuiLink-root"
        href="https://example.com"
      >
        <div
          class="css-16lxa1r e58tik11"
        >
          <img
            alt="Dicta itaque nisi mollitia voluptate."
            class="css-1opieq8-Teaser e1nfkf2e0"
            height="500"
            loading="lazy"
            srcset="https://picsum.photos/seed/8xHsH/800/400 800w,
https://picsum.photos/seed/dkVOrEU/500/300 500w,
https://picsum.photos/seed/3ZbG2/300/200 300w,
https://picsum.photos/seed/FUAYxo2gyq/200/100 200w"
            title="aliquid deleniti quisquam"
            width="1000"
          />
          <header
            class="css-0 e58tik12"
          >
            <h1
              class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
            >
              Pre Title:  Title
            </h1>
          </header>
        </div>
      </a>
    </article>
    <article
      class="css-kxq09b e58tik10"
      x="0"
      y="1"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-9lisvk-MuiTypography-root-MuiLink-root"
        href="https://example.com"
      >
        <div
          class="css-16lxa1r e58tik11"
        >
          <img
            alt="Dicta itaque nisi mollitia voluptate."
            class="css-1opieq8-Teaser e1nfkf2e0"
            height="500"
            loading="lazy"
            srcset="https://picsum.photos/seed/8xHsH/800/400 800w,
https://picsum.photos/seed/dkVOrEU/500/300 500w,
https://picsum.photos/seed/3ZbG2/300/200 300w,
https://picsum.photos/seed/FUAYxo2gyq/200/100 200w"
            title="aliquid deleniti quisquam"
            width="1000"
          />
          <header
            class="css-0 e58tik12"
          >
            <h1
              class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
            >
              Pre Title:  Title
            </h1>
          </header>
        </div>
      </a>
    </article>
    <article
      class="css-1mvpedp e58tik10"
      x="0"
      y="2"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-9lisvk-MuiTypography-root-MuiLink-root"
        href="https://example.com"
      >
        <div
          class="css-16lxa1r e58tik11"
        >
          <img
            alt="Dicta itaque nisi mollitia voluptate."
            class="css-1opieq8-Teaser e1nfkf2e0"
            height="500"
            loading="lazy"
            srcset="https://picsum.photos/seed/8xHsH/800/400 800w,
https://picsum.photos/seed/dkVOrEU/500/300 500w,
https://picsum.photos/seed/3ZbG2/300/200 300w,
https://picsum.photos/seed/FUAYxo2gyq/200/100 200w"
            title="aliquid deleniti quisquam"
            width="1000"
          />
          <header
            class="css-0 e58tik12"
          >
            <h1
              class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
            >
               Teambesprechung vom 23.05.
            </h1>
          </header>
        </div>
      </a>
    </article>
  </div>
</DocumentFragment>
`;

exports[`Teaser Grid Block should render ThreeColumns 1`] = `
<DocumentFragment>
  <div
    class="css-1cvxa09 e1v93h7b0"
  >
    <article
      class="css-13hhtda e58tik10"
      x="0"
      y="0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-9lisvk-MuiTypography-root-MuiLink-root"
        href="https://example.com"
      >
        <div
          class="css-16lxa1r e58tik11"
        >
          <img
            alt="Dicta itaque nisi mollitia voluptate."
            class="css-1opieq8-Teaser e1nfkf2e0"
            height="500"
            loading="lazy"
            srcset="https://picsum.photos/seed/8xHsH/800/400 800w,
https://picsum.photos/seed/dkVOrEU/500/300 500w,
https://picsum.photos/seed/3ZbG2/300/200 300w,
https://picsum.photos/seed/FUAYxo2gyq/200/100 200w"
            title="aliquid deleniti quisquam"
            width="1000"
          />
          <header
            class="css-0 e58tik12"
          >
            <h1
              class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
            >
              Pre Title:  Title
            </h1>
          </header>
        </div>
      </a>
    </article>
    <article
      class="css-1sdku99 e58tik10"
      x="4"
      y="0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-9lisvk-MuiTypography-root-MuiLink-root"
        href="https://example.com"
      >
        <div
          class="css-16lxa1r e58tik11"
        >
          <img
            alt="Dicta itaque nisi mollitia voluptate."
            class="css-1opieq8-Teaser e1nfkf2e0"
            height="500"
            loading="lazy"
            srcset="https://picsum.photos/seed/8xHsH/800/400 800w,
https://picsum.photos/seed/dkVOrEU/500/300 500w,
https://picsum.photos/seed/3ZbG2/300/200 300w,
https://picsum.photos/seed/FUAYxo2gyq/200/100 200w"
            title="aliquid deleniti quisquam"
            width="1000"
          />
          <header
            class="css-0 e58tik12"
          >
            <h1
              class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
            >
              Pre Title:  Title
            </h1>
          </header>
        </div>
      </a>
    </article>
    <article
      class="css-ciulb1 e58tik10"
      x="8"
      y="0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-9lisvk-MuiTypography-root-MuiLink-root"
        href="https://example.com"
      >
        <div
          class="css-16lxa1r e58tik11"
        >
          <img
            alt="Dicta itaque nisi mollitia voluptate."
            class="css-1opieq8-Teaser e1nfkf2e0"
            height="500"
            loading="lazy"
            srcset="https://picsum.photos/seed/8xHsH/800/400 800w,
https://picsum.photos/seed/dkVOrEU/500/300 500w,
https://picsum.photos/seed/3ZbG2/300/200 300w,
https://picsum.photos/seed/FUAYxo2gyq/200/100 200w"
            title="aliquid deleniti quisquam"
            width="1000"
          />
          <header
            class="css-0 e58tik12"
          >
            <h1
              class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
            >
               Teambesprechung vom 23.05.
            </h1>
          </header>
        </div>
      </a>
    </article>
  </div>
</DocumentFragment>
`;

exports[`Teaser Grid Block should render WithClassName 1`] = `
<DocumentFragment>
  <div
    class="extra-classname css-1cvxa09 e1v93h7b0"
  >
    <article
      class="css-13hhtda e58tik10"
      x="0"
      y="0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-9lisvk-MuiTypography-root-MuiLink-root"
        href="https://example.com"
      >
        <div
          class="css-16lxa1r e58tik11"
        >
          <img
            alt="Dicta itaque nisi mollitia voluptate."
            class="css-1opieq8-Teaser e1nfkf2e0"
            height="500"
            loading="lazy"
            srcset="https://picsum.photos/seed/8xHsH/800/400 800w,
https://picsum.photos/seed/dkVOrEU/500/300 500w,
https://picsum.photos/seed/3ZbG2/300/200 300w,
https://picsum.photos/seed/FUAYxo2gyq/200/100 200w"
            title="aliquid deleniti quisquam"
            width="1000"
          />
          <header
            class="css-0 e58tik12"
          >
            <h1
              class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
            >
              Pre Title:  Title
            </h1>
          </header>
        </div>
      </a>
    </article>
    <article
      class="css-1sdku99 e58tik10"
      x="4"
      y="0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-9lisvk-MuiTypography-root-MuiLink-root"
        href="https://example.com"
      >
        <div
          class="css-16lxa1r e58tik11"
        >
          <img
            alt="Dicta itaque nisi mollitia voluptate."
            class="css-1opieq8-Teaser e1nfkf2e0"
            height="500"
            loading="lazy"
            srcset="https://picsum.photos/seed/8xHsH/800/400 800w,
https://picsum.photos/seed/dkVOrEU/500/300 500w,
https://picsum.photos/seed/3ZbG2/300/200 300w,
https://picsum.photos/seed/FUAYxo2gyq/200/100 200w"
            title="aliquid deleniti quisquam"
            width="1000"
          />
          <header
            class="css-0 e58tik12"
          >
            <h1
              class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
            >
              Pre Title:  Title
            </h1>
          </header>
        </div>
      </a>
    </article>
    <article
      class="css-ciulb1 e58tik10"
      x="8"
      y="0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-9lisvk-MuiTypography-root-MuiLink-root"
        href="https://example.com"
      >
        <div
          class="css-16lxa1r e58tik11"
        >
          <img
            alt="Dicta itaque nisi mollitia voluptate."
            class="css-1opieq8-Teaser e1nfkf2e0"
            height="500"
            loading="lazy"
            srcset="https://picsum.photos/seed/8xHsH/800/400 800w,
https://picsum.photos/seed/dkVOrEU/500/300 500w,
https://picsum.photos/seed/3ZbG2/300/200 300w,
https://picsum.photos/seed/FUAYxo2gyq/200/100 200w"
            title="aliquid deleniti quisquam"
            width="1000"
          />
          <header
            class="css-0 e58tik12"
          >
            <h1
              class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
            >
               Teambesprechung vom 23.05.
            </h1>
          </header>
        </div>
      </a>
    </article>
  </div>
</DocumentFragment>
`;

exports[`Teaser Grid Block should render WithEmotion 1`] = `
<DocumentFragment>
  <div
    class="css-1cvxa09 e1v93h7b0"
  >
    <article
      class="css-13hhtda e58tik10"
      x="0"
      y="0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-9lisvk-MuiTypography-root-MuiLink-root"
        href="https://example.com"
      >
        <div
          class="css-16lxa1r e58tik11"
        >
          <img
            alt="Dicta itaque nisi mollitia voluptate."
            class="css-1opieq8-Teaser e1nfkf2e0"
            height="500"
            loading="lazy"
            srcset="https://picsum.photos/seed/8xHsH/800/400 800w,
https://picsum.photos/seed/dkVOrEU/500/300 500w,
https://picsum.photos/seed/3ZbG2/300/200 300w,
https://picsum.photos/seed/FUAYxo2gyq/200/100 200w"
            title="aliquid deleniti quisquam"
            width="1000"
          />
          <header
            class="css-0 e58tik12"
          >
            <h1
              class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
            >
              Pre Title:  Title
            </h1>
          </header>
        </div>
      </a>
    </article>
    <article
      class="css-1sdku99 e58tik10"
      x="4"
      y="0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-9lisvk-MuiTypography-root-MuiLink-root"
        href="https://example.com"
      >
        <div
          class="css-16lxa1r e58tik11"
        >
          <img
            alt="Dicta itaque nisi mollitia voluptate."
            class="css-1opieq8-Teaser e1nfkf2e0"
            height="500"
            loading="lazy"
            srcset="https://picsum.photos/seed/8xHsH/800/400 800w,
https://picsum.photos/seed/dkVOrEU/500/300 500w,
https://picsum.photos/seed/3ZbG2/300/200 300w,
https://picsum.photos/seed/FUAYxo2gyq/200/100 200w"
            title="aliquid deleniti quisquam"
            width="1000"
          />
          <header
            class="css-0 e58tik12"
          >
            <h1
              class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
            >
              Pre Title:  Title
            </h1>
          </header>
        </div>
      </a>
    </article>
    <article
      class="css-ciulb1 e58tik10"
      x="8"
      y="0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-9lisvk-MuiTypography-root-MuiLink-root"
        href="https://example.com"
      >
        <div
          class="css-16lxa1r e58tik11"
        >
          <img
            alt="Dicta itaque nisi mollitia voluptate."
            class="css-1opieq8-Teaser e1nfkf2e0"
            height="500"
            loading="lazy"
            srcset="https://picsum.photos/seed/8xHsH/800/400 800w,
https://picsum.photos/seed/dkVOrEU/500/300 500w,
https://picsum.photos/seed/3ZbG2/300/200 300w,
https://picsum.photos/seed/FUAYxo2gyq/200/100 200w"
            title="aliquid deleniti quisquam"
            width="1000"
          />
          <header
            class="css-0 e58tik12"
          >
            <h1
              class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
            >
               Teambesprechung vom 23.05.
            </h1>
          </header>
        </div>
      </a>
    </article>
  </div>
</DocumentFragment>
`;

exports[`Teaser Grid Block should render WithShowLoad 1`] = `
<DocumentFragment>
  <div
    class="css-1cvxa09 e1v93h7b0"
  >
    <article
      class="css-13hhtda e58tik10"
      x="0"
      y="0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-9lisvk-MuiTypography-root-MuiLink-root"
        href="https://example.com"
      >
        <div
          class="css-16lxa1r e58tik11"
        >
          <img
            alt="Dicta itaque nisi mollitia voluptate."
            class="css-1opieq8-Teaser e1nfkf2e0"
            height="500"
            loading="lazy"
            srcset="https://picsum.photos/seed/8xHsH/800/400 800w,
https://picsum.photos/seed/dkVOrEU/500/300 500w,
https://picsum.photos/seed/3ZbG2/300/200 300w,
https://picsum.photos/seed/FUAYxo2gyq/200/100 200w"
            title="aliquid deleniti quisquam"
            width="1000"
          />
          <header
            class="css-0 e58tik12"
          >
            <h1
              class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
            >
              Pre Title:  Title
            </h1>
          </header>
          <p
            class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
          >
            Lead
          </p>
        </div>
      </a>
    </article>
    <article
      class="css-1sdku99 e58tik10"
      x="4"
      y="0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-9lisvk-MuiTypography-root-MuiLink-root"
        href="https://example.com"
      >
        <div
          class="css-16lxa1r e58tik11"
        >
          <img
            alt="Dicta itaque nisi mollitia voluptate."
            class="css-1opieq8-Teaser e1nfkf2e0"
            height="500"
            loading="lazy"
            srcset="https://picsum.photos/seed/8xHsH/800/400 800w,
https://picsum.photos/seed/dkVOrEU/500/300 500w,
https://picsum.photos/seed/3ZbG2/300/200 300w,
https://picsum.photos/seed/FUAYxo2gyq/200/100 200w"
            title="aliquid deleniti quisquam"
            width="1000"
          />
          <header
            class="css-0 e58tik12"
          >
            <h1
              class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
            >
              Pre Title:  Title
            </h1>
          </header>
          <p
            class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
          >
            Lead
          </p>
        </div>
      </a>
    </article>
    <article
      class="css-ciulb1 e58tik10"
      x="8"
      y="0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-9lisvk-MuiTypography-root-MuiLink-root"
        href="https://example.com"
      >
        <div
          class="css-16lxa1r e58tik11"
        >
          <img
            alt="Dicta itaque nisi mollitia voluptate."
            class="css-1opieq8-Teaser e1nfkf2e0"
            height="500"
            loading="lazy"
            srcset="https://picsum.photos/seed/8xHsH/800/400 800w,
https://picsum.photos/seed/dkVOrEU/500/300 500w,
https://picsum.photos/seed/3ZbG2/300/200 300w,
https://picsum.photos/seed/FUAYxo2gyq/200/100 200w"
            title="aliquid deleniti quisquam"
            width="1000"
          />
          <header
            class="css-0 e58tik12"
          >
            <h1
              class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
            >
               Teambesprechung vom 23.05.
            </h1>
          </header>
          <p
            class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
          >
            Lead
          </p>
        </div>
      </a>
    </article>
  </div>
</DocumentFragment>
`;
